# cpptest

./: .gitignore  CMakeLists.txt  cpptest.cpp  cpptest.hpp  libcpptest.cpp  test.cpp
include/: cpptest.hpp
src/: cpptest.cpp
test/: test.cpp
